--- a/app/src/main/res/drawable/stylo_borde_editext.xml
+++ b/app/src/main/res/drawable/stylo_borde_editext.xml
@@ -7,7 +7,7 @@
     </solid>
     <stroke
         android:width="2dp"
-        android:color="@color/secondaryColor">
+        android:color="@color/gold">
     </stroke>
     <padding
         android:bottom="10sp"
@@ -17,7 +17,7 @@
 
     </padding>
     <corners
-        android:radius="15dp">
+        android:radius="10dp">
 
     </corners>
 </shape>
