--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -121,7 +121,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="30dp"
             android:fontFamily="sans-serif-black"
-            android:text=" Recuperar constraseña"
+            android:text=" Recuperar contraseña"
             android:textColor="@color/gris_fondo"
             android:textSize="20dp" />
 
