--- a/app/src/main/res/layout/fragment_carrito.xml
+++ b/app/src/main/res/layout/fragment_carrito.xml
@@ -1,65 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.ui.Fragments.comidaFragment"
-    android:background="@color/primaryColor">
+    android:background="@color/el_tincho_sinfondo_background"
+    android:foregroundTint="#FFFFFF"
+    tools:context=".views.ui.Fragments.comidaFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <androidx.appcompat.widget.Toolbar
+            android:id="@+id/actionbartoolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/fondo_tincho_background"
-            android:id="@+id/actionbartoolbar"
             app:menu="@menu/menu_navigation_toolbar"
             tools:ignore="MissingConstraints">
+
             <ImageView
                 android:id="@+id/fotoperfil"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_gravity="left"
-                android:src="@mipmap/icono_toolbar_tincho"/>
+                android:src="@mipmap/icono_toolbar_tincho" />
         </androidx.appcompat.widget.Toolbar>
 
         <RelativeLayout
             android:id="@+id/encabezado"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="32dp"
             android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
             android:background="@drawable/theme_gradients_background">
+
             <ImageView
                 android:layout_width="110dp"
                 android:layout_height="110dp"
                 android:layout_alignParentRight="true"
-                app:srcCompat="@mipmap/platillos_menu"
-                android:layout_marginRight="30dp">
+                android:layout_marginRight="30dp"
+                app:srcCompat="@mipmap/platillos_menu">
 
             </ImageView>
 
             <TextView
                 android:layout_width="200dp"
                 android:layout_height="115dp"
-                android:gravity="center"
-                android:text="Platillos"
-                android:textColor="@color/secondaryDarkColor"
-                android:textSize="30sp"
-                android:textStyle="bold"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="9dp"
-                android:layout_marginEnd="81dp" />
+                android:layout_marginEnd="81dp"
+                android:gravity="center"
+                android:text="Pedido"
+                android:textColor="@color/primaryColor"
+                android:textSize="30sp"
+                android:textStyle="bold" />
         </RelativeLayout>
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="452dp"
+            android:layout_height="305dp"
             android:layout_marginTop="10dp">
 
             <androidx.recyclerview.widget.RecyclerView
@@ -75,11 +79,38 @@
             </androidx.recyclerview.widget.RecyclerView>
         </ScrollView>
 
+        <TextView
+            android:id="@+id/textViewTOTAL"
+            android:layout_width="match_parent"
+            android:layout_height="59dp"
+            android:background="@drawable/el_tincho_background"
+            android:fontFamily="sans-serif-black"
+            android:text="Total: "
+            android:textAlignment="center"
+            android:textColor="@color/primaryTextColor"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            tools:text="Total: " />
+
+        <Button
+            android:id="@+id/botonComprar"
+            android:layout_width="match_parent"
+            android:layout_height="59dp"
+            android:layout_marginLeft="60dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="60dp"
+            android:layout_marginBottom="15dp"
+            android:background="@drawable/boton_favorito"
+            android:text="Comprar"
+            android:textColor="#000000"
+            android:textSize="18dp" />
+
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/buttonNavigationMenu"
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:layout_marginTop="10dp"
+            android:layout_marginEnd="0dp"
             android:background="@color/fondo_tincho_background"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
