--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="secondaryLightColor">#a7dfff</color>
     <color name="secondaryDarkColor">#407eae</color>
     <color name="primaryTextColor">#ffffff</color>
+    <color name="whiteTransparent">#6FFFFFFF</color>
     <color name="secondaryTextColor">#000000</color>
     <color name="naranja">#FF8C00</color>
     <color name="gris_fondo">#F0F9F9FC</color>
