--- a/app/src/main/res/navigation/nav_grahn.xml
+++ b/app/src/main/res/navigation/nav_grahn.xml
@@ -5,7 +5,87 @@
     android:id="@+id/nav_grahn"
     app:startDestination="@id/menuFragment">
 
-
+    <fragment
+        android:id="@+id/favoritosFragment"
+        android:name="com.example.eltinchopracticas.views.ui.Fragments.favoritosFragment"
+        android:label="fragment_favoritos"
+        tools:layout="@layout/fragment_favoritos" >
+        <action
+            android:id="@+id/action_favoritosFragment_to_comidaFragment"
+            app:destination="@id/comidaFragment" />
+        <action
+            android:id="@+id/action_favoritosFragment_to_pedidosFragment"
+            app:destination="@id/pedidosFragment" />
+        <action
+            android:id="@+id/action_favoritosFragment_to_rutaFragment"
+            app:destination="@id/rutaFragment" />
+        <action
+            android:id="@+id/action_favoritosFragment_to_ayudaFragment"
+            app:destination="@id/ayudaFragment" />
+        <action
+            android:id="@+id/action_favoritosFragment_to_menuFragment"
+            app:destination="@id/menuFragment" />
+        <action
+            android:id="@+id/action_favoritosFragment_to_perfilFragment"
+            app:destination="@id/perfilFragment" />
+        <action
+            android:id="@+id/action_favoritosFragment_to_loginActivity"
+            app:destination="@id/loginActivity" />
+    </fragment>
+    <fragment
+        android:id="@+id/rutaFragment"
+        android:name="com.example.eltinchopracticas.views.ui.Fragments.rutaFragment"
+        android:label="fragment_ruta"
+        tools:layout="@layout/fragment_ruta" >
+        <action
+            android:id="@+id/action_rutaFragment_to_comidaFragment"
+            app:destination="@id/comidaFragment" />
+        <action
+            android:id="@+id/action_rutaFragment_to_perfilFragment"
+            app:destination="@id/perfilFragment" />
+        <action
+            android:id="@+id/action_rutaFragment_to_favoritosFragment"
+            app:destination="@id/favoritosFragment" />
+        <action
+            android:id="@+id/action_rutaFragment_to_menuFragment"
+            app:destination="@id/menuFragment" />
+        <action
+            android:id="@+id/action_rutaFragment_to_ayudaFragment"
+            app:destination="@id/ayudaFragment" />
+        <action
+            android:id="@+id/action_rutaFragment_to_pedidosFragment"
+            app:destination="@id/pedidosFragment" />
+        <action
+            android:id="@+id/action_rutaFragment_to_loginActivity"
+            app:destination="@id/loginActivity" />
+    </fragment>
+    <fragment
+        android:id="@+id/pedidosFragment"
+        android:name="com.example.eltinchopracticas.views.ui.Fragments.pedidosFragment"
+        android:label="fragment_pedidos"
+        tools:layout="@layout/fragment_pedidos" >
+        <action
+            android:id="@+id/action_pedidosFragment_to_ayudaFragment"
+            app:destination="@id/ayudaFragment" />
+        <action
+            android:id="@+id/action_pedidosFragment_to_menuFragment"
+            app:destination="@id/menuFragment" />
+        <action
+            android:id="@+id/action_pedidosFragment_to_favoritosFragment"
+            app:destination="@id/favoritosFragment" />
+        <action
+            android:id="@+id/action_pedidosFragment_to_rutaFragment"
+            app:destination="@id/rutaFragment" />
+        <action
+            android:id="@+id/action_pedidosFragment_to_comidaFragment"
+            app:destination="@id/comidaFragment" />
+        <action
+            android:id="@+id/action_pedidosFragment_to_perfilFragment"
+            app:destination="@id/perfilFragment" />
+        <action
+            android:id="@+id/action_pedidosFragment_to_loginActivity"
+            app:destination="@id/loginActivity" />
+    </fragment>
     <fragment
         android:id="@+id/perfilFragment"
         android:name="com.example.eltinchopracticas.views.ui.Fragments.perfilFragment"
@@ -17,10 +97,47 @@
         <action
             android:id="@+id/action_perfilFragment_to_menuFragment"
             app:destination="@id/menuFragment" />
-
-
+        <action
+            android:id="@+id/action_perfilFragment_to_rutaFragment"
+            app:destination="@id/rutaFragment" />
+        <action
+            android:id="@+id/action_perfilFragment_to_favoritosFragment"
+            app:destination="@id/favoritosFragment" />
+        <action
+            android:id="@+id/action_perfilFragment_to_ayudaFragment"
+            app:destination="@id/ayudaFragment" />
+        <action
+            android:id="@+id/action_perfilFragment_to_pedidosFragment"
+            app:destination="@id/pedidosFragment" />
         <action
             android:id="@+id/action_perfilFragment_to_loginActivity"
+            app:destination="@id/loginActivity" />
+    </fragment>
+    <fragment
+        android:id="@+id/ayudaFragment"
+        android:name="com.example.eltinchopracticas.views.ui.Fragments.ayudaFragment"
+        android:label="fragment_ayuda"
+        tools:layout="@layout/fragment_ayuda" >
+        <action
+            android:id="@+id/action_ayudaFragment_to_pedidosFragment"
+            app:destination="@id/pedidosFragment" />
+        <action
+            android:id="@+id/action_ayudaFragment_to_comidaFragment"
+            app:destination="@id/comidaFragment" />
+        <action
+            android:id="@+id/action_ayudaFragment_to_perfilFragment"
+            app:destination="@id/perfilFragment" />
+        <action
+            android:id="@+id/action_ayudaFragment_to_rutaFragment"
+            app:destination="@id/rutaFragment" />
+        <action
+            android:id="@+id/action_ayudaFragment_to_favoritosFragment"
+            app:destination="@id/favoritosFragment" />
+        <action
+            android:id="@+id/action_ayudaFragment_to_menuFragment"
+            app:destination="@id/menuFragment" />
+        <action
+            android:id="@+id/action_ayudaFragment_to_loginActivity"
             app:destination="@id/loginActivity" />
     </fragment>
     <fragment
@@ -31,8 +148,19 @@
         <action
             android:id="@+id/action_comidaFragment_to_perfilFragment"
             app:destination="@id/perfilFragment" />
-
-       <action
+        <action
+            android:id="@+id/action_comidaFragment_to_rutaFragment"
+            app:destination="@id/rutaFragment" />
+        <action
+            android:id="@+id/action_comidaFragment_to_favoritosFragment"
+            app:destination="@id/favoritosFragment" />
+        <action
+            android:id="@+id/action_comidaFragment_to_ayudaFragment"
+            app:destination="@id/ayudaFragment" />
+        <action
+            android:id="@+id/action_comidaFragment_to_pedidosFragment"
+            app:destination="@id/pedidosFragment" />
+        <action
             android:id="@+id/action_comidaFragment_to_menuFragment"
             app:destination="@id/menuFragment" />
         <action
@@ -50,6 +178,18 @@
         <action
             android:id="@+id/action_menuFragment_to_perfilFragment"
             app:destination="@id/perfilFragment" />
+        <action
+            android:id="@+id/action_menuFragment_to_rutaFragment"
+            app:destination="@id/rutaFragment" />
+        <action
+            android:id="@+id/action_menuFragment_to_favoritosFragment"
+            app:destination="@id/favoritosFragment" />
+        <action
+            android:id="@+id/action_menuFragment_to_ayudaFragment"
+            app:destination="@id/ayudaFragment" />
+        <action
+            android:id="@+id/action_menuFragment_to_pedidosFragment"
+            app:destination="@id/pedidosFragment" />
 
     </fragment>
     <activity
