--- a/app/src/main/res/layout/activity_recuperar.xml
+++ b/app/src/main/res/layout/activity_recuperar.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:padding="20dp"
     android:gravity="center"
-    android:background="@color/primaryColor"
+    android:background="@mipmap/image_parrilla"
 
     tools:context=".views.ui.activities.RecuperarActivity">
 
@@ -15,60 +15,66 @@
         android:layout_width="276dp"
         android:layout_height="150dp"
         android:scaleType="fitXY"
-        android:layout_marginRight="20dp"
         app:srcCompat="@mipmap/ic_banner_foreground_tincho" />
 
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/style_fondo"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+
+            android:fontFamily="sans-serif-black"
+            android:text="Che! "
+            android:textColor="@color/naranja"
+            android:textSize="45dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
             android:fontFamily="sans-serif-black"
             android:text="Recuperá la contraseña"
-            android:textColor="@color/secondaryColor"
+            android:textColor="@color/gold"
             android:textSize="30dp" />
 
         <EditText
             android:id="@+id/correoRestaurar"
-            android:layout_width="308dp"
+            android:layout_width="match_parent"
             android:layout_gravity="center"
-            android:layout_height="50dp"
-            android:layout_marginTop="10dp"
+            android:layout_height="65dp"
+            android:layout_marginTop="5dp"
             android:layout_marginBottom="20dp"
             android:background="@drawable/stylo_borde_editext"
             android:fontFamily="@font/opensanslight"
             android:hint="Correo electronico"
             android:inputType="textEmailAddress"
-            android:padding="10dp"
             android:textSize="20dp" />
     </LinearLayout>
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+
+
         <Button
             android:id="@+id/Restaurarboton"
-            android:layout_width="142dp"
+            android:layout_width="match_parent"
             android:layout_height="59dp"
             android:layout_marginTop="20dp"
-            android:layout_marginLeft="160dp"
+
             android:background="@drawable/stylo_borde_boton"
             android:text="Recuperar"
-            android:textColor="#F6F1F0"
+            android:textColor="@color/primaryDarkColor"
             android:textSize="20dp" />
         <Button
             android:id="@+id/loginRecuperar"
-            android:layout_width="142dp"
+            android:layout_width="match_parent"
             android:layout_height="59dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/stylo_borde_boton"
             android:text="LogIn"
-            android:textColor="#F6F1F0"
+            android:textColor="@color/primaryDarkColor"
             android:textSize="20dp" />
-    </RelativeLayout>
+
 </LinearLayout>
