--- a/app/src/main/res/layout/fragment_ayuda.xml
+++ b/app/src/main/res/layout/fragment_ayuda.xml
@@ -9,50 +9,54 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@color/primaryColor">
+        android:background="@color/primaryColor"
+        android:orientation="vertical">
+
         <androidx.appcompat.widget.Toolbar
+            android:id="@+id/actionbartoolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/fondo_tincho_background"
-            android:id="@+id/actionbartoolbar"
             app:menu="@menu/menu_navigation_toolbar"
             tools:ignore="MissingConstraints">
+
             <ImageView
                 android:id="@+id/fotoperfil"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_gravity="left"
-                android:src="@mipmap/icono_toolbar_tincho"/>
+                android:src="@mipmap/icono_toolbar_tincho" />
         </androidx.appcompat.widget.Toolbar>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="32dp"
             android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
             android:background="@drawable/theme_gradients_background">
+
             <ImageView
                 android:layout_width="90dp"
                 android:layout_height="110dp"
                 android:layout_alignParentRight="true"
-                app:srcCompat="@mipmap/ayuda_menu"
-                android:layout_marginRight="30dp">
+                android:layout_marginRight="30dp"
+                app:srcCompat="@mipmap/ayuda_menu">
 
             </ImageView>
 
             <TextView
                 android:layout_width="200dp"
                 android:layout_height="115dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginStart="9dp"
+                android:layout_marginEnd="81dp"
                 android:gravity="center"
                 android:text="Ayuda"
                 android:textColor="@color/secondaryColor"
                 android:textSize="30sp"
-                android:textStyle="bold"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginStart="9dp"
-                android:layout_marginEnd="81dp" />
+                android:textStyle="bold" />
         </RelativeLayout>
 
         <LinearLayout
@@ -76,10 +80,31 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
+                android:inputType="textEmailAddress"
                 android:paddingVertical="5dp"
                 android:text="eltinchoparrillargentina@gmail.com"
-                android:textColor="@color/primaryLightColor"
-                android:textSize="16sp" />
+                android:textColor="@color/primaryTextColor"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="Celular"
+                android:textColor="@color/secondaryDarkColor"
+                android:textSize="28sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="phone"
+                android:paddingVertical="5dp"
+                android:text="+573199120110"
+                android:textColor="@color/primaryTextColor"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -93,43 +118,49 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:inputType="textWebEditText"
                 android:paddingVertical="5dp"
                 android:text="https://goo.gl/maps/RJSGkT1iKoMXeXXA9"
-                android:textColor="@color/el_tincho_sinfondo_background"
-                android:textSize="16sp" />
+                android:textColor="@color/primaryTextColor"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
+
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:padding="5dp">
 
             <ImageView
                 android:layout_width="180dp"
                 android:layout_height="100dp"
                 android:layout_marginLeft="25dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="0dp"
                 android:src="@mipmap/foto_tincho" />
 
             <ImageView
                 android:layout_width="281dp"
                 android:layout_height="117dp"
                 android:layout_marginLeft="190dp"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="0dp"
                 android:src="@mipmap/comida_tincho_foreground" />
-        </RelativeLayout>
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/buttonNavigationMenu"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="140dp"
-            android:background="@color/fondo_tincho_background"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:menu="@menu/menu_navigation_bar"
-            tools:ignore="MissingConstraints">
 
-        </com.google.android.material.bottomnavigation.BottomNavigationView>
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/buttonNavigationMenu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="140dp"
+                android:background="@color/fondo_tincho_background"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:menu="@menu/menu_navigation_bar"
+                tools:ignore="MissingConstraints">
+
+            </com.google.android.material.bottomnavigation.BottomNavigationView>
+        </RelativeLayout>
+
     </LinearLayout>
+
 </FrameLayout>
